--- a/website/css/style.css
+++ b/website/css/style.css
@@ -10,6 +10,14 @@ h1, h2, h3 {
   text-transform: uppercase;
 }
 
+h1 {
+  font-size: 2rem;
+}
+
+h2 {
+  font-size: 1.5rem;
+}
+
 /*
 .off-canvas {
 	background-color: $top-bar-bg;
