--- a/website/css/style.css
+++ b/website/css/style.css
@@ -20,65 +20,65 @@ h2 {
 
 /*
 .off-canvas {
-	background-color: $top-bar-bg;
-	a {
-		color: $body-bg;
-	}
+  background-color: $top-bar-bg;
+  a {
+    color: $body-bg;
+  }
 
-	a.menu-text {
-		color: $body-bg;
-		border-bottom: 1px solid $body-bg;
-	}
+  a.menu-text {
+    color: $body-bg;
+    border-bottom: 1px solid $body-bg;
+  }
 
-	a.button {
-		margin: 0 10px;
-		background-color: $body-bg;
-		color: $top-bar-bg;
-	}
+  a.button {
+    margin: 0 10px;
+    background-color: $body-bg;
+    color: $top-bar-bg;
+  }
 }
 .top-bar {
-	background-color: $top-bar-bg;
+  background-color: $top-bar-bg;
 
-	ul.menu {
-		background-color: transparent;
+  ul.menu {
+    background-color: transparent;
 
-		li {
+    li {
 
-			a {
-				align-items: center;
-				color: $body-bg;
-			}
+      a {
+        align-items: center;
+        color: $body-bg;
+      }
 
-			a:hover {
-				color: $top-bar-link-color-hover;
-			}
+      a:hover {
+        color: $top-bar-link-color-hover;
+      }
 
-			a.button {
-				background-color: $body-bg;
-				color: $top-bar-bg;
-			}
-		}
-	}
+      a.button {
+        background-color: $body-bg;
+        color: $top-bar-bg;
+      }
+    }
+  }
 
-	.cell {
+  .cell {
 
-		a {
-			align-items: center;
-			color: $body-bg;
+    a {
+      align-items: center;
+      color: $body-bg;
 
-			span {
-				display: inline-block;
-			}
-		}
-	}
+      span {
+        display: inline-block;
+      }
+    }
+  }
 
-	.cell:nth-child(2) {
-		text-align: center;
-	}
+  .cell:nth-child(2) {
+    text-align: center;
+  }
 
-	.cell:last-child {
-		text-align: right;
-	}
+  .cell:last-child {
+    text-align: right;
+  }
 }
 */
 .off-canvas {
@@ -88,6 +88,8 @@ h2 {
   color: #0092c6;
 }
 .off-canvas .menu-text {
+  padding: 0.5rem;
+  line-height: 40px;
   border-bottom: 1px solid #35495e;
 }
 .off-canvas a.button {
